# reposync

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: linux-release.yaml  macos-release.yaml  pipeline.yaml  release.yaml
src/: git.rs  main.rs
