[package]
name = "reposync"
version = "72.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.*", features = [
    "json",
    "blocking",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.*", features = ["derive"] }
clap = { version = "4.5.*", features = ["env"] }
indicatif = "0.*"

[profile.release]
strip = true
lto = true
